# waves-optimizer

./: README.md  pyproject.toml
data/inputs/: dados.xlsx
data/outputs/: resposta_guloso_1.xlsx  resposta_guloso_2.xlsx  resposta_guloso_3.xlsx  resposta_guloso_4.xlsx  resposta_milp_1.xlsx  resposta_milp_2.xlsx
waves_op/: example.py  io.py  metrics.py
waves_op/models/: box.py  solver.py  wave.py
waves_op/optimization/heuristic/: greedy.py
waves_op/optimization/milp/: builder.py  optimizer.py
