[tool.poetry]
name = "waves-op"
version = "0.1.0"
description = ""
authors = ["renan <renanmath7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.3"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
ortools = "^9.9.3963"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
